cleanup code of all posts caroussel+fix caroussel fixed size

--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -85,26 +85,30 @@
 
     <generic-swiper *ngIf="tendencyPosts && tendencyPosts.length>0" [items]="tendencyPosts" title="Articles à la une">
       <ng-template let-post>
-        <div class="card-wrapper">
-          <div class="card card-carousel">
-            <div
-              [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-              class="card-img-top">
-            </div>
-            <div class="card-body">
-              <div class="mb-2">
+        <div class="h-100">
+          <div class="card border-0 bg-tertiary">
+            <a (click)="openPost(post.slug,$event)">
+              <img class="card-img-top"
+                [src]="post.media && post.media.urlMediumLarge ? post.media.urlMediumLarge : post.media.urlFull"
+                alt="Post image">
+            </a>
+            <div class="card-body pb-4">
+              <div class="d-flex align-items-center mb-4 mt-n1">
                 <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
                 <span class="fs-xs opacity-20 mx-3">|</span>
-                <p class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</p>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</a>
               </div>
-              <a class="text-decoration-none" (click)="openPost(post.slug,$event)">
-                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
-                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
-              </a>
-              <hr>
-              <div class="d-flex">
-                <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-                <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+              <h3 class="h4 card-title card-title-truncate">
+                <a (click)="openPost(post.slug,$event)">{{post.titleText}}</a>
+              </h3>
+              <p class="card-text card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+            </div>
+            <div class="card-footer pt-3">
+              <div class="d-flex align-items-center text-decoration-none pb-2">
+                <img class="rounded-circle"
+                  [src]="post.fullAuthor.avatar_url_size_48 ? post.fullAuthor.avatar_url_size_48 : post.fullAuthor.avatar_url_size_24 ? post.fullAuthor.avatar_url_size_24 : post.fullAuthor.avatar_url_size_96 "
+                  width="48" alt="Post author">
+                <h6 class="ps-3 mb-0">{{post.fullAuthor.name}}</h6>
               </div>
             </div>
           </div>
@@ -141,26 +145,29 @@
 
   <generic-swiper *ngIf="topPosts && topPosts.length>0" [items]="topPosts" title="Nos derniers articles">
     <ng-template let-post>
-      <div class="card-wrapper">
-        <div class="card card-carousel">
-          <div
-            [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-            class="card-img-top" alt="Card image">
-          </div>
-          <div class="card-body">
-            <div class="mb-2">
+      <div class="h-100">
+        <div class="card border-0 bg-tertiary">
+          <a (click)="openPost(post.slug,$event)">
+            <img class="card-img-top"
+              [src]="post.media && post.media.urlLarge ? post.media.urlLarge : post.media.urlFull" alt="Post image">
+          </a>
+          <div class="card-body pb-4">
+            <div class="d-flex align-items-center mb-4 mt-n1">
               <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
               <span class="fs-xs opacity-20 mx-3">|</span>
-              <p class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</p>
+              <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</a>
             </div>
-            <a class="text-decoration-none" (click)="openPost(post.slug,$event)">
-              <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
-              <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
-            </a>
-            <hr>
-            <div class="d-flex">
-              <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-              <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+            <h3 class="h4 card-title card-title-truncate">
+              <a (click)="openPost(post.slug,$event)">{{post.titleText}}</a>
+            </h3>
+            <p class="card-text card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+          </div>
+          <div class="card-footer pt-3">
+            <div class="d-flex align-items-center text-decoration-none pb-2">
+              <img class="rounded-circle"
+                [src]="post.fullAuthor.avatar_url_size_48 ? post.fullAuthor.avatar_url_size_48 : post.fullAuthor.avatar_url_size_24 ? post.fullAuthor.avatar_url_size_24 : post.fullAuthor.avatar_url_size_96 "
+                width="48" alt="Post author">
+              <h6 class="ps-3 mb-0">{{post.fullAuthor.name}}</h6>
             </div>
           </div>
         </div>
@@ -198,26 +205,29 @@
     <generic-swiper *ngIf="mostSeenPosts && mostSeenPosts.length>0" [items]="mostSeenPosts"
       title="Articles les plus vus">
       <ng-template let-post>
-        <div class="card-wrapper">
-          <div class="card card-carousel">
-            <div
-              [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-              class="card-img-top" alt="Card image">
-            </div>
-            <div class="card-body">
-              <div class="mb-2">
+        <div class="h-100">
+          <div class="card border-0 bg-tertiary">
+            <a (click)="openPost(post.slug,$event)">
+              <img class="card-img-top"
+                [src]="post.media && post.media.urlLarge ? post.media.urlLarge : post.media.urlFull" alt="Post image">
+            </a>
+            <div class="card-body pb-4">
+              <div class="d-flex align-items-center mb-4 mt-n1">
                 <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
                 <span class="fs-xs opacity-20 mx-3">|</span>
-                <p class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</p>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</a>
               </div>
-              <a class="text-decoration-none" (click)="openPost(post.slug,$event)">
-                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
-                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
-              </a>
-              <hr>
-              <div class="d-flex">
-                <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-                <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+              <h3 class="h4 card-title card-title-truncate">
+                <a (click)="openPost(post.slug,$event)">{{post.titleText}}</a>
+              </h3>
+              <p class="card-text card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+            </div>
+            <div class="card-footer pt-3">
+              <div class="d-flex align-items-center text-decoration-none pb-2">
+                <img class="rounded-circle"
+                  [src]="post.fullAuthor.avatar_url_size_48 ? post.fullAuthor.avatar_url_size_48 : post.fullAuthor.avatar_url_size_24 ? post.fullAuthor.avatar_url_size_24 : post.fullAuthor.avatar_url_size_96 "
+                  width="48" alt="Post author">
+                <h6 class="ps-3 mb-0">{{post.fullAuthor.name}}</h6>
               </div>
             </div>
           </div>
