--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -178,10 +178,47 @@
   </div>
 </section>
 
-<div class="pb-5 mb-md-3 mb-lg-4 mb-xxl-5">
+<section class="background-opacity mb-5">
+  <div class="container overflow-hidden">
+    <generic-swiper *ngIf="tendencyPosts && tendencyPosts.length>0" [items]="tendencyPosts" title="Articles à la une">
+      <ng-template let-post>
+        <div class="h-100">
+          <div class="card border-0 bg-tertiary">
+            <a (click)="openPost(post.slug,$event)">
+              <img class="card-img-top"
+                [src]="post.media && post.media.urlMediumLarge ? post.media.urlMediumLarge : post.media.urlFull"
+                alt="Post image">
+            </a>
+            <div class="card-body pb-4">
+              <div class="d-flex align-items-center mb-4 mt-n1">
+                <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
+                <span class="fs-xs opacity-20 mx-3">|</span>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</a>
+              </div>
+              <h3 class="h4 card-title card-title-truncate">
+                <a (click)="openPost(post.slug,$event)">{{post.titleText}}</a>
+              </h3>
+              <p class="card-text card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+            </div>
+            <div class="card-footer pt-3">
+              <div class="d-flex align-items-center text-decoration-none pb-2">
+                <img class="rounded-circle"
+                  [src]="post.fullAuthor.avatar_url_size_48 ? post.fullAuthor.avatar_url_size_48 : post.fullAuthor.avatar_url_size_24 ? post.fullAuthor.avatar_url_size_24 : post.fullAuthor.avatar_url_size_96 "
+                  width="48" alt="Post author">
+                <h6 class="ps-3 mb-0">{{post.fullAuthor.name}}</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-template>
+    </generic-swiper>
+  </div>
+</section>
+
+<div class="py-5 my-md-3 my-lg-4 my-xxl-5">
   <newsletter></newsletter>
 </div>
 
-<div class="pb-5 mb-5">
+<div class="py-5 my-5">
   <our-clients></our-clients>
 </div>
