--- a/client-myjss/src/app/modules/my-services/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.html
@@ -39,7 +39,7 @@
       [firstItemImage]="'assets/img/myjss-services/carousel_formality_init.jpg'"
       title="Les formalités légales les plus courantes">
       <ng-template let-post>
-        <div class="card-wrapper">
+        <div class="h-100">
           <div class="card card-carousel">
             <div class="d-flex flex-column card-body justify-content-center align-items-center text-align-center">
               <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
@@ -52,8 +52,8 @@
   </div>
 </section>
 
-<section class="container mt-lg-3 mt-xl-4 mt-xxl-5">
-  <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
+<section class="container my-lg-3 my-xl-4 my-xxl-5 pt-5">
+  <div class="bg-yellow-custom rounded-5 overflow-hidden my-2 my-sm-4 my-lg-5">
     <div class="row align-items-center position-relative">
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
@@ -76,7 +76,7 @@
   </div>
 </section>
 
-<section class="py-5">
+<section class="py-5 mt-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
     <div class="text-center">
       <h2 class="h1 pb-3 mb-lg-4 text-white">Votre allié juridique de confiance</h2>
@@ -300,30 +300,34 @@
   </div>
 </section>
 
-<section class="background-opacity">
+<section class="background-opacity mb-5">
   <div class="container overflow-hidden">
     <generic-swiper *ngIf="tendencyPosts && tendencyPosts.length>0" [items]="tendencyPosts" title="Articles à la une">
       <ng-template let-post>
-        <div class="card-wrapper">
-          <div class="card card-carousel d-flex flex-column">
-            <div
-              [ngStyle]="{'background-image': 'url(' + (post.media && post.media.urlThumbnail ? post.media.urlThumbnail : 'assets/img/blog/grid/01.jpg') + ')'}"
-              class="card-img-top">
-            </div>
-            <div class="card-body d-flex flex-column">
-              <div class="mb-2">
+        <div class="h-100">
+          <div class="card border-0 bg-tertiary">
+            <a (click)="openPost(post.slug,$event)">
+              <img class="card-img-top"
+                [src]="post.media && post.media.urlMediumLarge ? post.media.urlMediumLarge : post.media.urlFull"
+                alt="Post image">
+            </a>
+            <div class="card-body pb-4">
+              <div class="d-flex align-items-center mb-4 mt-n1">
                 <span class="fs-sm text-body-secondary">{{post.date | date:'yyyy-MM-dd'}}</span>
                 <span class="fs-xs opacity-20 mx-3">|</span>
-                <p class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</p>
+                <a class="badge text-nav fs-xs border" *ngIf="post.postTags[0]">{{post.postTags[0].name}}</a>
               </div>
-              <a class="text-decoration-none" (click)="openPost(post.slug,$event)">
-                <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
-                <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
-              </a>
-              <hr>
-              <div class="card-footer p-0 m-0 d-flex">
-                <img class="rounded-circle" [src]="post.fullAuthor.avatar_url_size_24" width="48" alt="Post author">
-                <h6 class="ps-3 pt-2 mb-0">{{post.fullAuthor.name}}</h6>
+              <h3 class="h4 card-title card-title-truncate">
+                <a (click)="openPost(post.slug,$event)">{{post.titleText}}</a>
+              </h3>
+              <p class="card-text card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
+            </div>
+            <div class="card-footer pt-3">
+              <div class="d-flex align-items-center text-decoration-none pb-2">
+                <img class="rounded-circle"
+                  [src]="post.fullAuthor.avatar_url_size_48 ? post.fullAuthor.avatar_url_size_48 : post.fullAuthor.avatar_url_size_24 ? post.fullAuthor.avatar_url_size_24 : post.fullAuthor.avatar_url_size_96 "
+                  width="48" alt="Post author">
+                <h6 class="ps-3 mb-0">{{post.fullAuthor.name}}</h6>
               </div>
             </div>
           </div>
@@ -333,4 +337,6 @@
   </div>
 </section>
 
-<our-clients></our-clients>
+<div class="py-5 my-5">
+  <our-clients></our-clients>
+</div>
