fix fixed image in carrousel

--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -40,7 +40,7 @@
         <h2 class="h1 pb-3 pt-5  mb-lg-4 text-white text-nowrap" style="overflow: visible;">
           Les annonces légales les plus courantes
         </h2>
-        <div class="">
+        <div class="image-height">
           <div class="card h-100 border-0">
             <img src="assets/img/announcement/carousel_announcement_init.jpg" class="card object-fit-cover h-100"
               alt="Card image">
