--- a/client-myjss/src/app/modules/my-services/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.html
@@ -39,7 +39,7 @@
         <h2 class="h1 pb-3 pt-5  mb-lg-4 text-white text-nowrap" style="overflow: visible;">
           Les formalités légales les plus courantes
         </h2>
-        <div>
+        <div class="image-height">
           <div class="card h-100 border-0">
             <img src="assets/img/myjss-services/carousel_formality_init.jpg" class="card object-fit-cover h-100"
               alt="Card image">
@@ -355,4 +355,6 @@
   </div>
 </section>
 
-<our-clients></our-clients>
+<div class="py-5 my-5">
+  <our-clients></our-clients>
+</div>
