unified title size

--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-6 col-xl-5 offset-xl-1">
-      <p class="text-body fs-sm mb-5 text-white">Le JSS est un journal d’annonces légales parisien historique et MyJSS
+      <p class="text-body fs-lg mb-5 text-white">Le JSS est un journal d’annonces légales parisien historique et MyJSS
         son prestataire de service en formalités légales des entreprises. <br />Nous accompagnons chaque jour les
         professionnels du droit et du chiffre dans toutes les étapes de la vie juridique des sociétés. <br />Notre
         gérons vos publicités légales liées à la vie sociale de votre entreprise, complexes et chronophages, afin que
