--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -4,7 +4,7 @@
       <h1 class="h1 pe-xxl-5 me-xl-4 mb-md-0 text-white">Participez à notre aventure !</h1>
     </div>
     <div class="col-md-6 col-xl-5 offset-xl-1">
-      <p class="text-body fs-sm mb-5 text-white">Journal d’annonces légales parisien historique et prestataire en
+      <p class="text-body fs-lg mb-5 text-white">Journal d’annonces légales parisien historique et prestataire en
         formalités légales, le JSS est un des leaders dans son domaine.<br />
         Vous cherchez un environnement dynamique où votre talent fera la différence ? <br />
         Découvrez nos opportunités et participez à notre aventure !
