--- a/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-6 col-xl-5 offset-xl-1">
-      <p class="text-body fs-sm mb-5 text-white">Le JSS, c’est avant tout une entreprise familiale et indépendante de
+      <p class="text-body fs-lg mb-5 text-white">Le JSS, c’est avant tout une entreprise familiale et indépendante de
         plus de 125 ans.<br />
         Ce sont aussi des millions d’entreprises qui nous ont fait confiance.<br />
         Acteur reconnu et incontournable des annonces et formalités légales, le JSS accompagne les entreprises dans
