--- a/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
+++ b/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-6 col-xl-5 offset-xl-1">
-      <p class="text-body fs-sm mb-5 text-white">Nos équipes sont notre plus grande force.<br />
+      <p class="text-body fs-lg mb-5 text-white">Nos équipes sont notre plus grande force.<br />
         Chaque collaborateur apporte son expertise, son énergie et sa motivation pour nous faire avancer.<br />
         L’humain est au cœur de notre réussite, c’est pourquoi nous cultivons une équipe engagée, passionnée et tournée
         vers l’avenir.<br />
