--- a/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
-        <p class="text-body fs-xl mb-5 text-white">Confiez à nos experts vos documents à authentifier pour une démarche
+        <p class="text-body fs-lg mb-5 text-white">Confiez à nos experts vos documents à authentifier pour une démarche
           à l'étranger ou en France d’entreprise étrangère.</p>
         <double-buttons orderActionLabel="Demander une apostille ou légalisation"
           quotationActionLabel="Demander un devis" linkLabel="Lien vers le simulateur">
