--- a/client-myjss/src/app/modules/my-services/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/domiciliation/domiciliation.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
-        <p class="text-body fs-xl mb-5 text-white">Domiciliez votre entreprise à une adresse prestigieuse au cœur de
+        <p class="text-body fs-lg mb-5 text-white">Domiciliez votre entreprise à une adresse prestigieuse au cœur de
           Paris et bénéficiez d’un service de redirection personnalisé. </p>
         <double-buttons orderActionLabel="Domicilier mon entreprise" quotationActionLabel="Demander un devis"
           linkLabel="Lien vers la page métier">
