--- a/client-myjss/src/app/modules/my-services/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
-        <p class="text-body fs-xl mb-5 text-white">Confiez vos formalités légales à nos juristes formalistes afin de
+        <p class="text-body fs-lg mb-5 text-white">Confiez vos formalités légales à nos juristes formalistes afin de
           vous consacrer à votre coeur de métier. </p>
         <double-buttons orderActionLabel="Déposer une formalité" quotationActionLabel="Demander un devis">
         </double-buttons>
