--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
-        <p class="text-body fs-xl mb-5 text-white">Publiez vos annonces légales en ligne sur myjss.fr partout en France
+        <p class="text-body fs-lg mb-5 text-white">Publiez vos annonces légales en ligne sur myjss.fr partout en France
           grâce à notre réseau. Profitez de l'assistance de nos experts par téléphone et par mail. </p>
         <double-buttons class="text-grey" orderActionLabel=" Publier une annonce légale"
           quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale" [isLightButtons]="true">
