--- a/client-myjss/src/app/modules/my-services/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/document/document.component.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
-        <p class="text-body fs-xl mb-5 text-white">Tous les documents juridiques disponibles auprès des tribunaux de
+        <p class="text-body fs-lg mb-5 text-white">Tous les documents juridiques disponibles auprès des tribunaux de
           commerce en quelques clics !</p>
         <double-buttons orderActionLabel="Demander mes documents" quotationActionLabel="Demander un devis">
         </double-buttons>
