--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -1,268 +1,95 @@
-<header class="navbar-light navbar-sticky header-static">
-  <div class="navbar-top d-none d-lg-block small">
+<header class="header-area">
+  <div class="header-navbar-top py-1 bg-light d-none d-lg-block">
     <div class="container">
-      <div class="d-md-flex justify-content-between align-items-center my-2">
-        <!-- Top bar left -->
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" style="cursor: pointer;" (click)="openSubscribe($event)">S'abonner</a><!-- TODO -->
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" style="cursor: pointer;" (click)="openSignIn($event)">Se connecter</a><!-- TODO -->
-          </li>
-        </ul>
-        <!-- Top bar right -->
-        <div class="d-flex align-items-center">
-
-          <!-- Font size accessibility START -->
-          <div class="btn-group me-3" role="group" aria-label="font size changer">
-            <input type="radio" class="btn-check" name="fntradio" id="font-sm">
-            <label class="btn btn-xs btn-outline-primary mb-0" for="font-sm">A-</label>
-
-            <input type="radio" class="btn-check" name="fntradio" id="font-default" checked>
-            <label class="btn btn-xs btn-outline-primary mb-0" for="font-default">A</label>
-
-            <input type="radio" class="btn-check" name="fntradio" id="font-lg">
-            <label class="btn btn-xs btn-outline-primary mb-0" for="font-lg">A+</label>
-          </div>
-
-          <div class="nav-item">
-            <a class="nav-link px-2 fs-5" role="button" data-bs-toggle="modal" data-bs-target="#searchModal">
-              <i class="bi bi-search fs-4"> </i>
-            </a>
-          </div>
-
-          <!-- Dark mode options START -->
-          <div class="nav-item dropdown mx-2">
-            <!-- Switch button -->
-            <button class="modeswitch" id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown"
-              data-bs-display="static">
-              <svg class="theme-icon-active">
-                <use href="#"></use>
-              </svg>
-            </button>
-            <!-- Dropdown items -->
-            <ul class="dropdown-menu min-w-auto dropdown-menu-end" aria-labelledby="bd-theme">
-              <li class="mb-1">
-                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light">
-                  <svg width="16" height="16" fill="currentColor"
-                    class="bi bi-brightness-high-fill fa-fw mode-switch me-1" viewBox="0 0 16 16">
-                    <path
-                      d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-                    <use href="#"></use>
-                  </svg>Mode jour
-                </button>
-              </li>
-              <li class="mb-1">
-                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-moon-stars-fill fa-fw mode-switch me-1" viewBox="0 0 16 16">
-                    <path
-                      d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-                    <path
-                      d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
-                    <use href="#"></use>
-                  </svg>Mode nuit
-                </button>
-              </li>
-              <li>
-                <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-circle-half fa-fw mode-switch me-1" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
-                    <use href="#"></use>
-                  </svg>Automatique
-                </button>
-              </li>
-            </ul>
-          </div>
-          <!-- Dark mode options END -->
-
-          <ul class="nav">
-            <li class="nav-item">
-              <a class="nav-link px-2 fs-5" href="https://www.facebook.com/Journal.Special.des.Societes"
-                target="_blank"><i class="fab fa-facebook-square"></i></a>
+      <div class="d-flex justify-content-between align-items-center flex-wrap py-0">
+        <div class="d-flex flex-wrap">
+          <a href="#" class="me-2">PUBLIER UNE ANNONCE LÉGALE <i class="fa fa-external-link-alt ms-1"></i></a>
+          <a href="#" class="middle-link me-2 px-2 ">DÉPOSER UNE FORMALITÉ <i
+              class="fa fa-external-link-alt ms-1"></i></a>
+          <a href="#">CONSULTER UNE ANNONCE LÉGALE <i class="fa fa-external-link-alt ms-1"></i></a>
+        </div>
+        <div class="d-flex align-items-center flex-wrap gap-2">
+          <a href="#">BLOG</a>
+          <a href="#">NEWSLETTER</a>
+          <ul class="list-inline mb-0 d-flex gap-1">
+            <li class="list-inline-item">
+              <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
+                <i class="bi-facebook"></i>
+              </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link px-2 fs-5" href="https://twitter.com/Jss_Journal" target="_blank"><i
-                  class="fab fa-twitter-square"></i></a>
+            <li class="list-inline-item">
+              <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link px-2 fs-5" href="https://www.linkedin.com/company/journal-special-des-societes/"
-                target="_blank"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link px-2 fs-5" href="https://www.instagram.com/journalspecialdessocietes/"
-                target="_blank"><i class="fab fa-instagram-square"></i></a>
+            <li class="list-inline-item">
+              <a class="social-icon rounded-circle d-flex align-items-center justify-content-center" href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
             </li>
           </ul>
         </div>
       </div>
-      <!-- Divider -->
-      <div class="border-bottom border-2 border-primary opacity-1"></div>
     </div>
   </div>
-
-  <!-- Logo Nav START -->
-  <nav class="navbar navbar-expand-lg">
+  <div class="header-navbar-middle d-none d-lg-block">
     <div class="container">
-      <!-- Logo START -->
-      <a class="navbar-brand" href="/">
-        <img class="navbar-brand-item light-mode-item" src="assets/images/logo.png" alt="logo">
-        <img class="navbar-brand-item dark-mode-item" src="assets/images/logo.png" alt="logo">
-      </a>
-      <!-- Logo END -->
-
-      <!-- Main navbar START -->
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <!-- Signin collapse -->
-        <ul class="nav d-lg-none row">
-          <li class="nav-item col">
-            <a class="nav-link" style="cursor: pointer; text-align: center;"
-              (click)="openSubscribe($event)">S'abonner</a><!-- TODO -->
-          </li>
-          <li class="nav-item col">
-            <a class="nav-link" style="cursor: pointer; text-align: center;" (click)="openSignIn($event)">Se
-              connecter</a><!-- TODO -->
-          </li>
-        </ul>
-        <ul class="navbar-nav navbar-nav-scroll mx-auto">
-
-          <!-- Nav item articles -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="homeMenu" data-bs-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false"
-              [ngClass]="{'active':getCurrentRoute()=='/' || getCurrentRoute().indexOf('/post')==0}">Articles</a>
-            <ul class="dropdown-menu" aria-labelledby="homeMenu">
-              <li> <a class="dropdown-item" href="/" [ngClass]="{'active':getCurrentRoute()=='/'}">Accueil</a></li>
-              <li class="dropdown-submenu dropend">
-                <a class="dropdown-item dropdown-toggle"
-                  [ngClass]="{'active':getCurrentRoute().indexOf('/department')>=0}" href="#">Par
-                  département</a>
-                <ul class="dropdown-menu dropdown-menu-start" data-bs-popper="none">
-                  <li> <a *ngFor="let department of departments" class="dropdown-item" style="cursor: pointer;"
-                      (click)="openDepartment(department,$event)">{{department.code!="0" ?(department.code+ " - ")
-                      :""}}{{department.name}}</a>
-                  </li>
-                </ul>
-              </li>
-              <li> <a *ngFor="let category of categories" class="dropdown-item"
-                  [ngClass]="{'active':getCurrentRoute().indexOf('/category')>=0 && getCurrentRoute().indexOf('/'+category.slug)>=0}"
-                  style="cursor: pointer;" (click)="openCategoryPosts(category,$event)">{{category.name}}</a></li>
-            </ul>
-          </li>
-
-          <ng-container *ngFor="let category of categoriesByOrder ;let index = index">
-            <li class="nav-item"> <a class="nav-link " style="cursor: pointer;"
-                (click)="openCategoryPosts(category,$event)"
-                [ngClass]="{'active':getCurrentRoute().indexOf('/category')>=0 && getCurrentRoute().indexOf('/'+category.slug)>=0}"
-                *ngIf="index<4">{{category.name}}</a></li>
-          </ng-container>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle " href="#" id="alMenu" data-bs-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false" [ngClass]="{'active':getCurrentRoute().indexOf('/announcement')>=0}">Annonces
-              légales</a>
-            <ul class="dropdown-menu" aria-labelledby="alMenu">
-              <li> <a class="dropdown-item" (click)="openSearchAnnouncement($event)"
-                  style="text-transform: none;cursor: pointer">Consultez
-                  nos annonces légales</a></li>
-              <li> <a class="dropdown-item" (click)="openNewAnnouncement($event)"
-                  style="text-transform: none;cursor: pointer">Déposer une annonce légale</a>
-              </li>
-            </ul>
-          </li>
-
-          <li class="nav-item d-lg-none">
-            <div class="nav-item d-md-block">
-              <a style="cursor: pointer;" (click)="openNewFormality($event)" class="btn btn-sm btn-warning">Déposer
-                une formalité</a><!-- TODO -->
-            </div>
-          </li>
-          <li class="nav-item d-lg-none">
-            <div class="nav-item d-md-block">
-              <a style="cursor: pointer;" (click)="openMyJss($event)"
-                class="btn btn-sm btn-primary">MyJSS</a><!-- TODO -->
-            </div>
-          </li>
-
-        </ul>
-      </div>
-      <!-- Main navbar END -->
-
-      <!-- Nav right START -->
-      <div class="nav flex-nowrap align-items-center ">
-        <!-- Nav Button -->
-        <div class="nav-item d-md-block">
-          <a style="cursor: pointer;" (click)="openNewFormality($event)"
-            class="btn btn-sm btn-warning mb-0 mx-2">Déposer une formalité</a><!-- TODO -->
+      <div class="navbar-brand-wrapper py-1 d-flex justify-content-between align-items-center">
+        <a class="btn btn-dark" href="#">MyJSS<i class="fa fa-external-link-alt ms-1"></i></a>
+        <a class="navbar-brand ms-5 ps-3" href="index.html">
+          <img class="lazyload" src="assets/images/homepage/logo.svg" alt="image">
+        </a>
+        <div>
+          <a class="btn btn-light me-2" href="#">Se connecter</a>
+          <a class="btn btn-yellow" href="#">S'abonner</a>
         </div>
-        <div class="nav-item d-md-block">
-          <a style="cursor: pointer;" (click)="openMyJss($event)"
-            class="btn btn-sm btn-primary mb-0 mx-2">MyJSS</a><!-- TODO -->
-        </div>
-      </div>
-      <!-- Nav right END -->
 
-      <!-- Responsive navbar toggler -->
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="text-body h6 d-none d-sm-inline-block">Menu</span>
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      </div>
     </div>
-  </nav>
-  <!-- Logo Nav END -->
-</header>
+  </div>
+  <div class="header-navbar-bottom pt-2 pt-lg-0 border-top border-light">
+    <div class="container themeix-menu-selector">
+      <nav class="navbar text-uppercase text-white-100 navbar-expand-lg">
+        <div class="collapse navbar-collapse" id="main_nav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle" href="index.html">île de France </a>
 
-
-<!-- Modal Search START -->
-<div class="modal fade" id="searchModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-fullscreen">
-    <div class="modal-content">
-      <!-- Modal header -->
-      <div class="modal-header border-0 pt-sm-5 pe-sm-5">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="row"
-          [ngClass]="{'align-items-center' : !indexedEntities || indexedEntities.length==0,'h-100' : !indexedEntities || indexedEntities.length==0}">
-          <div class="col-lg-5 mx-auto mb-5">
-            <h2 class="mb-4">Rechercher des articles du JSS</h2>
-            <!-- Search form START -->
-            <form class="position-relative w-100">
-              <div class="mb-2 input-group-lg mb-0">
-                <!-- Search input -->
-                <input class="form-control mb-0 pe-6" type="text" name="search" placeholder="Que recherchez-vous ?"
-                  [(ngModel)]="searchText" (keydown)="searchEntities()" [ngModelOptions]="{standalone: true}">
-              </div>
-              <!-- Search button -->
-              <button type="button" class="position-absolute end-0 top-0 btn h-100 border-0">
-                <i class="bi bi-search display-8"></i>
-              </button>
-            </form>
-            <!-- Search form END -->
-            <p class="small mb-0">ex : droit des société, tribunal d'instance, TUP </p>
-          </div>
+              <ul class="dropdown-menu">
+                <li> <a *ngFor="let department of departments" class="dropdown-item" style="cursor: pointer;"
+                    (click)="openDepartment(department,$event)">{{department.code!="0" ?(department.code+ " - ")
+                    :""}}{{department.name}}</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item" *ngFor="let category of categories"> <a class="nav-link"
+                [ngClass]="{'active':getCurrentRoute().indexOf('/category')>=0 && getCurrentRoute().indexOf('/'+category.slug)>=0}"
+                style="cursor: pointer;" (click)="openCategoryPosts(category,$event)">{{category.name}}</a></li>
+            <li class="nav-item  py-0"><a class="nav-link podcast-nav-link py-0" href="#">Podcast<span><i
+                    class="fas fa-bolt"></i></span></a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><img src="assets/images/premium-icon.svg"
+                  class="me-1" />Premium
+              </a></li>
+          </ul>
         </div>
-        <div class="row">
-          <div *ngIf="indexedEntities" class="col-lg-5 mx-auto">
-            <div class="card mb-3" *ngFor="let post of indexedEntities">
-              <div class="row g-3">
-                <div class="col-4">
-                  <img class="rounded" [src]="post.text.media.urlThumbnail" alt="">
+        <div class="search-modal" data-bs-toggle="modal" data-bs-target="#search-modal"><a class="nav-link" href="#"> <i
+              class="fas fa-search"></i>loupe</a>
+        </div>
+      </nav>
+      <div class="modal fade" id="search-modal" data-bs-backdrop="static">
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+              <form class="forms">
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-search"></i></span>
+                  <input type="text" class="form-control" placeholder="Search Here">
                 </div>
-                <div class="col-8">
-                  <h6><a style="cursor: pointer;" (click)="openPost(post.text.slug, $event)"
-                      class="btn-link stretched-link text-reset fw-bold" [innerHTML]="post.text.titleText| trustHtml">
-                    </a>
-                  </h6>
-                  <p [innerHTML]="post.text.excerptText| trustHtml"></p>
-                  <div class="small mt-1">{{post.text.date | date:'EEEE d MMMM'}}</div>
-                </div>
-              </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</header>
