add ofx matching component

--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -35,5 +35,10 @@
         <bank-balance></bank-balance>
       </ng-template>
     </mat-tab>
+    <mat-tab label="Rapprochement auto.">
+      <ng-template matTabContent>
+        <ofx-matching></ofx-matching>
+      </ng-template>
+    </mat-tab>
   </mat-tab-group>
 </div>
